refactoring and fix: Threads icon in dark mode

--- a/static/style.css
+++ b/static/style.css
@@ -387,3 +387,7 @@ body {
     }
   }
 }
+
+.qrcode {
+  border-radius: 0.5rem;
+}
